--- a/_posts/2017-06-06-courses.md
+++ b/_posts/2017-06-06-courses.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Projects
+title: Courses
 description: My projects are here. # Add post description (optional)
 # needdate: true
 img: mac.jpg # Add image post (optional)
