--- a/_posts/2017-08-06-about-me.md
+++ b/_posts/2017-08-06-about-me.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: About Me
-description: I'm a prefinal year student persuing mechanical engineering. # Add post description (optional)
+description: I am essentially a person with SARCASTIC mind and SPIRITUAL nature. Perpetually passionate about MECHANICAL TERMS.Having an Incessant love in teaching. # Add post description (optional)
 # needdate: true
-img: i-rest.jpg # Add image post (optional)
+img:  # Add image post (optional)
 ---
 
 Hey there, I'm Shivang Trivedi !  
