--- a/_posts/2017-08-06-about-me.md
+++ b/_posts/2017-08-06-about-me.md
@@ -3,13 +3,15 @@ layout: post
 title: About Me
 description: I am essentially a person with SARCASTIC mind and SPIRITUAL nature. Perpetually passionate about MECHANICAL TERMS.Having an Incessant love in teaching. # Add post description (optional)
 # needdate: true
-img:  # Add image post (optional)
+img: about me.jpg # Add image post (optional)
 ---
 
-Hey there, I'm Shivang Trivedi !  
-I'm Happy to share my momemts.
-fksdsdhfdfd
-dfddgdg
-ddg
+#**WHO AM I**
+Hey Candids, I am Shivang J Trivedi,currently a bachelor at **L.J. Institue Of Engineering And Technology,A'bad,India**, pursuing my B.E in **MECHANICAL**.
+Basically I am an enthusiatic seeker of technology in the world of mechanical engineering.In the generation full of Technology I am just a **_Tyro_** who is **Embracing** the inventions in the way they are.As the consequence,I have successfully fill up the voidness of knowledge regarding mechanical terms in my life.I have acquired exquisite vision in our routine by which I can explore **WEIRDEST** thing in the **SIMPLEST WAY**.
 
-<!-- ![I and My friends]({{site.baseurl}}/assets/img/we-in-rest.jpg) -->
+#**WHY YOU SHOULD INTERESTED**
+As I have said I am a guy with a **VERSATILE** personality,I have different aspects for seeing the life.By figuring out the things in the same way in which they are existing,I am able to transfer my knowledge to anyone efficiently and in the most adequate way.In short with having **DISTINCT PERSONALITY**,in addition I have a **PHENOMINAL ABILITY OF TEACHING** by which I can make a person to explore **EXCEPTIONAL THINGS**.Here is the world where a person can either be full of knowledge or having a ability of transferring the knowledge.It is a kind of rare thing to get a guy with knowledge and also having a enough ability to transferring his knowledge.And here I am _one of them_,no doubt I am not having that much knowledge but atleast I can make a person fall in love with engineering who is hating engineering from eras...
+
+#**SOME TOPPING LINEAMENTS**#
+So above things are some general things for me,here are the things which are more essential in life from my perception.I am a _VOLUNTEER_ at **SAMARPAN MEDIATION** and soon be a _VOLUNTEER_ in **ISHA FOUNDATION**.I always pass my recess time in gaining knowledge regarding _INNER SCIENCE OF OUR BODY_.With addition in love with _MECHANICAl ENGINEERING_ and _TEACHING_,I am a person who has **MERELY UNFATHOMABLE LOVE** for **INNER ENGINEERING**.   
