--- a/_posts/2017-08-06-about-me.md
+++ b/_posts/2017-08-06-about-me.md
@@ -7,7 +7,7 @@ img: about.jpg   # Add image post (optional)
 ---
 
 # **WHO AM I**:bowtie:
-#### * Hey Candids!!! \\
+#### * Hey Candids!!!
 #### I am Shivang J Trivedi,currently a bachelor at **L.J. Institue Of Engineering And Technology,A'bad,India**, pursuing my B.E in **MECHANICAL**.
 #### Basically I am an enthusiatic seeker of technology in the world of mechanical engineering.In the generation full of Technology I am just a **_Tyro_** who is **Embracing** the inventions in the way they are.As the consequence,I have successfully fill up the voidness of knowledge regarding mechanical terms in my life.I have acquired exquisite vision in our routine by which I can explore **WEIRDEST** thing in the **SIMPLEST WAY**.
 
