--- a/_posts/2017-08-06-about-me.md
+++ b/_posts/2017-08-06-about-me.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: #### ABOUT ME:sparkles:
+title: ABOUT ME:sparkles:
 description: I am essentially a person with SARCASTIC mind and SPIRITUAL nature. Perpetually passionate about MECHANICAL TERMS.Having an Incessant love in teaching. # Add post description (optional)
 # needdate: true
 img: about.jpg   # Add image post (optional)
