--- a/_posts/2017-02-06-books.md
+++ b/_posts/2017-02-06-books.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: About Me
+title: Some useful stuffs
 description: I'm a prefinal year student persuing mechanical engineering. # Add post description (optional)
 # needdate: true
 img: i-rest.jpg # Add image post (optional)
