--- a/_posts/2017-02-06-books.md
+++ b/_posts/2017-02-06-books.md
@@ -3,7 +3,7 @@ layout: post
 title: Some useful stuffs
 description: I'm a prefinal year student persuing mechanical engineering. # Add post description (optional)
 # needdate: true
-img: i-rest.jpg # Add image post (optional)
+img: software.jpg # Add image post (optional)
 ---
 
 Hey there, I'm Shivang Trivedi !  
