--- a/_posts/2017-02-06-books.md
+++ b/_posts/2017-02-06-books.md
@@ -8,7 +8,7 @@ img: software.jpg # Add image post (optional)
 
 Hey there, I'm Shivang Trivedi !  
 I'm Happy to share my momemts.
-fksdsdhfdfd
+Ive some useful stuffs that you might like
 dfddgdg
 ddg
 
