--- a/_posts/2017-02-06-books.md
+++ b/_posts/2017-02-06-books.md
@@ -8,6 +8,6 @@ img: software.jpg # Add image post (optional)
  
 Hey there, I'm Shivang Trivedi !  
 I'm Happy to share my momemts.
-Ive some useful stuffs that you might like..ha 
+Ive some useful stuffs that you might like..
 
 <!-- ![I and My friends]({{site.baseurl}}/assets/img/we-in-rest.jpg) -->
